Move Registration API v1.x demo to the new notebook

--- a/demoroot/notebooks/07 Resource Registration API.ipynb
+++ b/demoroot/notebooks/07 Resource Registration API.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "68292349-1dab-4beb-a6ad-02234bdb99ab",
+   "id": "1bf2ae20-65b1-4fb2-9538-98c3068757b6",
    "metadata": {},
    "source": [
-    "## Registration API demo"
+    "## Registration API demo (v2.x)"
    ]
   },
   {
@@ -447,6 +447,151 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68292349-1dab-4beb-a6ad-02234bdb99ab",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Registration API demo (v1.x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62113a92-c640-47e8-b1bd-259b796d2fcc",
+   "metadata": {},
+   "source": [
+    "This is an example on how to use the EOEPCA Registration API to register metadata records in the Resource Catalogue."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2023cadc-3388-41c9-9056-0b5b2e155939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import datetime\n",
+    "import time\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cfd74e3-9f76-4c66-9822-1318fb140c2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_domain = \"develop.eoepca.org\"\n",
+    "registration_endpoint = f'https://registration-api-v1x.{base_domain}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d451b4a7-932e-494d-9636-2541932c9d18",
+   "metadata": {},
+   "source": [
+    "We will now register an ADES instance in the Registration API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae9f0432-f043-44f8-8ed8-452b86f7ec9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/register\",\n",
+    "    json={\n",
+    "        \"type\": \"ades\",\n",
+    "        \"url\": \"https://demo.pygeoapi.io/stable/processes\",\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28347b0e-290e-4354-9472-4b8a1c9a892e",
+   "metadata": {},
+   "source": [
+    "Check if the ADES is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "370f2163-d1e8-439b-8281-45f8efebbc40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/collections/metadata:main/items?type=service\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5da3743-e856-4180-a70b-0486cf1663f3",
+   "metadata": {},
+   "source": [
+    "We will now register a STAC Item from the Registration API JSON endpoint."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7666f665-b9f0-433b-903a-ce22317871b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url='https://raw.githubusercontent.com/radiantearth/stac-spec/master/examples/core-item.json'\n",
+    "stac_item=requests.get(url).text\n",
+    "#print(stac_item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30f47307-cb51-407f-a228-a803deccb753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/register-json\",\n",
+    "    json=json.loads(stac_item)\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b09c53c4-ed6d-4c08-b956-9f2de515b484",
+   "metadata": {},
+   "source": [
+    "Check if the STAC Item is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73f252f9-27d3-4c80-92df-eb4f33378991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(3)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/collections/metadata:main/items/20201211_223832_CS2\", headers=dict(f=\"json\", **headers))\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
   }
  ],
  "metadata": {
