Add Registration API demo for eoapi

--- a/demoroot/notebooks/07 Resource Registration API.ipynb
+++ b/demoroot/notebooks/07 Resource Registration API.ipynb
@@ -34,7 +34,9 @@
   {
    "cell_type": "markdown",
    "id": "ceb940d3-fde1-4fee-ab29-ece4a714ef4f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Interacting with the Resource Catalogue"
    ]
@@ -435,9 +437,19 @@
   {
    "cell_type": "markdown",
    "id": "d0cd7c90-9ff0-4425-85e3-d96b0ab1b648",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Interacting with the Data Catalogue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed71459e-3df4-4ae8-9341-3805201a4ca7",
+   "metadata": {},
+   "source": [
+    "Register a STAC collection to the Data Catalogue"
    ]
   },
   {
@@ -446,7 +458,165 @@
    "id": "b7f8ccf9-6bd8-4ecf-bc52-49418bb66d76",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "json_dict={\n",
+    "  \"inputs\": {\n",
+    "    \"source\": {\n",
+    "      \"href\": \"https://raw.githubusercontent.com/radiantearth/stac-spec/refs/heads/master/examples/collection.json\",\n",
+    "      \"rel\": \"collection\"\n",
+    "    },\n",
+    "    \"target\": {\n",
+    "      \"href\": \"https://eoapi.develop.eoepca.org/stac\",\n",
+    "      \"rel\": \"https://api.stacspec.org/v1.0.0/core\"\n",
+    "    }\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c68671e-c1a0-4118-b81a-d698216fbc80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/processes/register/execution\",\n",
+    "    json=json_dict\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e4dcfb6-9096-4654-a179-2f83e6c9e0dd",
+   "metadata": {},
+   "source": [
+    "Register a STAC item to the above collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3ea50ed-1532-4281-b892-79b321065bf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_dict={\n",
+    "  \"inputs\": {\n",
+    "    \"source\": {\n",
+    "      \"href\": \"https://raw.githubusercontent.com/radiantearth/stac-spec/refs/heads/master/examples/simple-item.json\",\n",
+    "      \"rel\": \"item\"\n",
+    "    },\n",
+    "    \"target\": {\n",
+    "      \"href\": \"https://eoapi.develop.eoepca.org/stac\",\n",
+    "      \"rel\": \"https://api.stacspec.org/v1.0.0/core\",\n",
+    "      \"collection\": \"simple-collection\"\n",
+    "    }\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29494e92-07ff-4498-b96b-3a0296574a6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/processes/register/execution\",\n",
+    "    json=json_dict\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a53c242-1337-4e59-be52-6da1b85c2e2d",
+   "metadata": {},
+   "source": [
+    "Deregister the STAC item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "741f2ef0-d20c-4c8e-9065-ae7204235332",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_dict={\n",
+    "  \"inputs\": {\n",
+    "    \"id\": \"20201211_223832_CS2\",\n",
+    "    \"rel\": \"item\",\n",
+    "    \"collection\": \"simple-collection\",\n",
+    "    \"target\": {\n",
+    "      \"href\": \"https://eoapi.develop.eoepca.org/stac\",\n",
+    "      \"rel\": \"https://api.stacspec.org/v1.0.0/core\"\n",
+    "    }\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24ef8d6f-a96a-4c5b-82a8-db97511636ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/processes/deregister/execution\",\n",
+    "    json=json_dict\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5b3ff80-e0cd-4c41-9d93-6ff04b69e3e1",
+   "metadata": {},
+   "source": [
+    "Deregister the STAC collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31c049d5-e826-453a-afa0-2772f81ac8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_dict={\n",
+    "  \"inputs\": {\n",
+    "    \"id\": \"simple-collection\",\n",
+    "    \"rel\": \"collection\",\n",
+    "    \"target\": {\n",
+    "      \"href\": \"https://eoapi.develop.eoepca.org/stac\",\n",
+    "      \"rel\": \"https://api.stacspec.org/v1.0.0/core\"\n",
+    "    }\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4445997c-49e7-4820-be1c-e212076d6cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/processes/deregister/execution\",\n",
+    "    json=json_dict\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
   },
   {
    "cell_type": "markdown",
