--- a/demoroot/notebooks/04 Data Access.ipynb
+++ b/demoroot/notebooks/04 Data Access.ipynb
@@ -1008,69 +1008,11 @@
     "img = Image.open(io.BytesIO(response.content))\n",
     "display(img)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5d1fa38d-6d15-4c73-81b7-041efd7bb355",
-   "metadata": {},
-   "source": [
-    "## (Paused) Data Analysis with Coverages (OGC API Coverages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd109d9c-1515-43ee-a97d-e215a6b8e1df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# COV_API_URL = f\"https://stacture.{base_domain}\"\n",
-    "# import requests\n",
-    "# from rasterio.io import MemoryFile\n",
-    "# COV_COLLECTIONS = f\"{COV_API_URL}/collections\"\n",
-    "# resp = requests.get(COV_COLLECTIONS).json()\n",
-    "# for collection in resp['collections']:\n",
-    "#     print(\"####\")\n",
-    "#     print(collection['title'])\n",
-    "#     print(collection['id'])\n",
-    "\n",
-    "# collection_id = collection['id']\n",
-    "# COLLECTION_URL = f\"{COV_API_URL}/collections/{collection_id}\"\n",
-    "# resp = requests.get(COLLECTION_URL).json()\n",
-    "# print(resp[\"description\"])\n",
-    "# print(resp['extent'])\n",
-    "# COVERAGE_URL = f\"{COLLECTION_URL}/coverage\"\n",
-    "# params = {\n",
-    "#     \"bbox\": \"18.5,52.4,18.7,52.7\",\n",
-    "#     \"datetime\": \"2023-12-31T10:00:00Z/2023-12-31T10:05:00Z\",\n",
-    "#     \"bbox-crs\": \"EPSG:4326\",\n",
-    "#     \"width\": 512,\n",
-    "#     \"height\": 512,\n",
-    "#     \"f\": \"image/tiff\",\n",
-    "# }\n",
-    "# resp = requests.get(COVERAGE_URL, params=params)\n",
-    "# resp\n",
-    "# with MemoryFile(resp.content) as memfile:\n",
-    "#     with memfile.open() as dataset:\n",
-    "#         print(\"BBOX:\", dataset.bounds)\n",
-    "#         print(\"CRS:\", dataset.crs)\n",
-    "#         data_array = dataset.read()\n",
-    "\n",
-    "# print(\"SHAPE:\", data_array.shape)\n",
-    "# print(\"MIN:\", data_array.min())\n",
-    "# print(\"MAX:\", data_array.max())\n",
-    "# print(\"MEAN:\", data_array.mean())\n",
-    "# print(\"STDEV:\", data_array.std())\n",
-    "# SCENES = f\"{COV_API_URL}/collections/{collection_id}/scenes\"\n",
-    "# resp = requests.get(SCENES).json()\n",
-    "# for scene in resp['scenes']:\n",
-    "#     print(scene)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "eoepca-demo",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1084,7 +1026,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
