Add multidim demo

--- a/demoroot/notebooks/04 Data Access.ipynb
+++ b/demoroot/notebooks/04 Data Access.ipynb
@@ -867,6 +867,130 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d482f2d-f6d8-4717-84f0-3b5536f02620",
+   "metadata": {},
+   "source": [
+    "## Access a multidimensional dataset (NetCDF, Zarr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c30ed1f1-b66f-4105-96ca-03c2cb7b3a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "import requests\n",
+    "from folium import Map, TileLayer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7c0ddf6-2eb3-47d5-a572-2f6a4c115718",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_domain = \"develop.eoepca.org\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "444b8fe5-af5f-42c5-a640-260645fe5aa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MULTIDIM_API_URL = f\"https://eoapi.{base_domain}/multidim/md\"\n",
+    "CEDA_EOCIS_NETCDF = \"https://dap.ceda.ac.uk/neodc/eocis/data/global_and_regional/sea_surface_temperature/CDR_v3/Analysis/L4/v3.0.1/2024/06/22/20240622120000-ESACCI-L4_GHRSST-SSTdepth-OSTIA-GLOB_ICDR3.0-v02.0-fv01.0.nc\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91255dd2-2907-4ec9-b389-8b503674b708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(f\"{MULTIDIM_API_URL}/variables\", params={\"url\": CEDA_EOCIS_NETCDF})\n",
+    "response.raise_for_status()\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fc9e681-6c44-48f6-a2e0-e33aa7e1c769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CEDA_EOCIS_VARIABLE = \"sea_ice_fraction\"\n",
+    "assert CEDA_EOCIS_VARIABLE in response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e5af9f0-c54d-437f-a569-40e6d7c1eb08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(\n",
+    "    f\"{MULTIDIM_API_URL}/info\",\n",
+    "    params={\n",
+    "        \"url\": CEDA_EOCIS_NETCDF,\n",
+    "        \"variable\": CEDA_EOCIS_VARIABLE,\n",
+    "        \"decode_times\": True,\n",
+    "        \"show_times\": True,\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "print(json.dumps(response.json(), indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82e972a9-e3c0-41d9-92cf-13bfd66d2251",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tilejson = requests.get(\n",
+    "    f\"{MULTIDIM_API_URL}/WebMercatorQuad/tilejson.json\",\n",
+    "    params = {\n",
+    "        \"url\": CEDA_EOCIS_NETCDF,\n",
+    "        \"variable\": CEDA_EOCIS_VARIABLE,\n",
+    "        \"rescale\": \"0,1\",\n",
+    "        \"colormap_name\": \"blues_r\",\n",
+    "    }\n",
+    ").json()\n",
+    "print(tilejson)\n",
+    "\n",
+    "bounds = tilejson[\"bounds\"]\n",
+    "\n",
+    "# The dataset is quite big so we MUST restrict to the higher zoom level (NetCDF do not have overviews)\n",
+    "maxzoom = tilejson[\"maxzoom\"]\n",
+    "\n",
+    "m = Map(\n",
+    "    location=((bounds[1] + bounds[3]) / 2,(bounds[0] + bounds[2]) / 2),\n",
+    "    zoom_start=maxzoom\n",
+    ")\n",
+    "\n",
+    "TileLayer(\n",
+    "    tiles=tilejson[\"tiles\"][0],\n",
+    "    opacity=1,\n",
+    "    attr=\"EOCIS\",\n",
+    "    min_native_zoom=maxzoom,\n",
+    "    max_native_zoom=maxzoom,\n",
+    ").add_to(m)\n",
+    "\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e5f75df3-85c3-4b14-b7e4-421ac40e4f0a",
    "metadata": {},
    "source": [
