Minor updates to Resource Catalogue notebook

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -2333,7 +2333,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4cada058-6b37-4789-95c2-bf1ef3b75539",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "first_item = next(mysearch.items())\n",
@@ -2484,7 +2486,7 @@
    "outputs": [],
    "source": [
     "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/{collection_id}/items/{stac_id}\", headers=dict(f=\"json\"))\n",
-    "response.raise_for_status()\n",
+    "# response.raise_for_status()\n",
     "response.json()"
    ]
   },
@@ -2564,7 +2566,7 @@
    "outputs": [],
    "source": [
     "response = requests.get(f\"{system_stac_endpoint}/collections/{collection_id}/items/{stac_id}\", headers=dict(f=\"json\"))\n",
-    "response.raise_for_status()\n",
+    "# response.raise_for_status()\n",
     "response.json()"
    ]
   },
@@ -2605,7 +2607,7 @@
    "outputs": [],
    "source": [
     "response = requests.get(f\"{system_stac_endpoint}/collections/{simple_collection_id}\", headers=dict(f=\"json\"))\n",
-    "response.raise_for_status()\n",
+    "# response.raise_for_status()\n",
     "response.json()"
    ]
   },
@@ -2718,6 +2720,17 @@
    "outputs": [],
    "source": [
     "url = f\"{system_stac_endpoint}/collections/{simple_collection_id}/items/20201212_223832_CS2\"\n",
+    "req = requests.delete(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebca4af5-d847-4a78-a2a7-9ace61fe9af9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f\"{system_stac_endpoint}/collections/{simple_collection_id}\"\n",
     "req = requests.delete(url)"
    ]
   },
