add idea to use openeo cdse aggregator

--- a/demoroot/notebooks/08 Use Case External Data Registration.ipynb
+++ b/demoroot/notebooks/08 Use Case External Data Registration.ipynb
@@ -540,7 +540,10 @@
     "Terrascope:\n",
     "- https://services.terrascope.be/stac/collections/urn:eop:VITO:TERRASCOPE_S5P_L3_NO2_TD_V1/items\n",
     "- https://docs.terrascope.be/Developers/WebServices/TerraCatalogue/STACAPI.html\n",
-    "- https://docs.terrascope.be/Developers/WebServices/TerraCatalogue/ProductDownload.html#authentication"
+    "- https://docs.terrascope.be/Developers/WebServices/TerraCatalogue/ProductDownload.html#authentication\n",
+    "\n",
+    "CDSE Aggregator:\n",
+    "- CDSE openEO aggregator with terrascope, get NO2 without registering to terrascope?"
    ]
   },
   {
