cdse aggregator endpoint

--- a/demoroot/notebooks/08 Use Case External Data Registration.ipynb
+++ b/demoroot/notebooks/08 Use Case External Data Registration.ipynb
@@ -533,7 +533,7 @@
    "source": [
     "S5P NO2 Troposphere L2: Sentinel-5P Nitrogen Dioxide tropospheric column\n",
     "\n",
-    "CDSE: not well filled\n",
+    "CDSE: not well filled for NO2\n",
     "- Offline: https://browser.stac.dataspace.copernicus.eu/collections/sentinel-5p-l2-no2-offl\n",
     "- Near Real Time: https://browser.stac.dataspace.copernicus.eu/collections/sentinel-5p-l2-no2-nrti?.language=de\n",
     "\n",
@@ -542,8 +542,9 @@
     "- https://docs.terrascope.be/Developers/WebServices/TerraCatalogue/STACAPI.html\n",
     "- https://docs.terrascope.be/Developers/WebServices/TerraCatalogue/ProductDownload.html#authentication\n",
     "\n",
-    "CDSE Aggregator:\n",
-    "- CDSE openEO aggregator with terrascope, get NO2 without registering to terrascope?"
+    "**To DO: Try CDSE Aggregator:**\n",
+    "- CDSE openEO aggregator with terrascope, get NO2 without registering to terrascope?\n",
+    "- https://openeofed.dataspace.copernicus.eu/"
    ]
   },
   {
@@ -1947,7 +1948,7 @@
     "    if datasets:\n",
     "        return xr.concat(datasets, dim=\"time\").sortby(\"time\")\n",
     "    else:\n",
-    "        print(\"⚠️ No valid datasets loaded.\")\n",
+    "        print(\"No valid datasets loaded.\")\n",
     "        return None"
    ]
   },
@@ -1992,14 +1993,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e92169e2-37a5-4ca7-a8f5-3c8336a8902d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "7f996c99-599a-4be6-91df-bc38f2597ce7",
    "metadata": {},
@@ -2018,22 +2011,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ffb9a881-aab8-401a-9cc1-26848d7760b7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'openeo'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mopeneo\u001b[39;00m\n\u001b[32m      2\u001b[39m connection = openeo.connect(\u001b[33m\"\u001b[39m\u001b[33mopeneo.vito.be\u001b[39m\u001b[33m\"\u001b[39m).authenticate_oidc()\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'openeo'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import openeo\n",
     "connection = openeo.connect(\"openeo.vito.be\").authenticate_oidc()"
@@ -2048,6 +2029,26 @@
    "source": [
     "# Option A: Save files to eopca workspace, adapt asset path\n",
     "# Option B: Register files with original href -> Authentication at access??"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ff52997-56f6-4988-a071-cc4a9a479809",
+   "metadata": {},
+   "source": [
+    "### Tropospheric NO2 - Terrascope openEO aggregator\n",
+    "- https://openeofed.dataspace.copernicus.eu/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a816b89-cbc9-471e-8576-c58325b75129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openeo\n",
+    "connection = openeo.connect(\"openeofed.dataspace.copernicus.eu\").authenticate_oidc()"
    ]
   }
  ],
