explained eoedm registration

--- a/demoroot/notebooks/08 Use Case External Data Registration.ipynb
+++ b/demoroot/notebooks/08 Use Case External Data Registration.ipynb
@@ -527,7 +527,11 @@
    "id": "8cf50549-3f97-4a22-838f-b8d69d3e91af",
    "metadata": {},
    "source": [
-    "*Optional:* To Do Registration BB: Replicate workflow with [eodm](https://github.com/geopython/eodm)"
+    "**To Do Registration BB:** Replicate workflow with [eodm](https://github.com/geopython/eodm).\n",
+    "\n",
+    "- As long as the corrected STAC Items and Collection are in memory, they can be registered using eodm [`load_stac_api_collections()`](stactools-sentinel2/examples/s2_dateline at s2_dateline · DLR-terrabyte/stactools-sentinel2) and [`load_stac_api_items()`](https://github.com/geopython/eodm/blob/main/src/eodm/load.py#L9)\n",
+    "- The target should be the URL of the EOEPCA STAC API **--> Which one would that be currently?**\n",
+    "- This would be a shortcut by not storing the jsons and not using the Registration BB Harvester."
    ]
   },
   {
@@ -3097,7 +3101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
