Update Resource Registration notebook

--- a/demoroot/notebooks/06 Resource Registration Harvester.ipynb
+++ b/demoroot/notebooks/06 Resource Registration Harvester.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "11cd1a65",
    "metadata": {},
    "outputs": [],
@@ -56,10 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6a974144",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GET https://registration-harvester-api.develop.eoepca.org/flowable-rest/service/repository/deployments\n",
+      "No workflows deployed\n"
+     ]
+    }
+   ],
    "source": [
     "url = f\"{flowable_base_url}/service/repository/deployments\"\n",
     "print(f\"GET {url}\")\n",
@@ -132,10 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6c0d6334",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sucessfully deployed workflow: https://registration-harvester-api.develop.eoepca.org/flowable-rest/service/repository/deployments/eeb593c7-3f86-11f0-bbce-f2cc86e9cfcb\n"
+     ]
+    }
+   ],
    "source": [
     "bpmn = \"https://raw.githubusercontent.com/EOEPCA/registration-harvester/refs/heads/main/workflows//stac-publish.bpmn\"\n",
     "bpmn_file = {os.path.basename(bpmn): requests.get(bpmn).text}\n",
@@ -175,10 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1235f850",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GET https://registration-harvester-api.develop.eoepca.org/flowable-rest/service/repository/process-definitions\n",
+      "1  STAC Publish                 version: 1     id: stacPublish:1:ef67ccca-3f86-11f0-bbce-f2cc86e9cfcb\n"
+     ]
+    }
+   ],
    "source": [
     "url = f\"{flowable_base_url}/service/repository/process-definitions\"\n",
     "print(f\"GET {url}\")\n",
@@ -208,10 +234,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0c7569d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GET https://registration-harvester-api.develop.eoepca.org/flowable-rest/service/runtime/process-instances\n",
+      "No running workflows\n"
+     ]
+    }
+   ],
    "source": [
     "url = f\"{flowable_base_url}/service/runtime/process-instances\"\n",
     "print(f\"GET {url}\")\n",
@@ -381,23 +416,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "84d1fdab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    {\n",
+      "        \"name\": \"stac_catalog_source\",\n",
+      "        \"value\": \"https://raw.githubusercontent.com/stac-utils/pystac/main/docs/example-catalog/catalog.json\"\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "variables = [\n",
-    "    {\"name\": \"stac_catalog_path\", \"type\": \"string\", \"value\": \"/worker/tests/data/example-catalog/catalog.json\"},\n",
+    "    {\n",
+    "        \"name\": \"stac_catalog_source\",\n",
+    "        \"value\": \"https://raw.githubusercontent.com/stac-utils/pystac/main/docs/example-catalog/catalog.json\"\n",
+    "    },\n",
+    "    #{\n",
+    "    #    \"name\": \"s3_endpoint_url\",\n",
+    "    #    \"value\": \"http://localhost:9000\"\n",
+    "    #},\n",
+    "    #{\n",
+    "    #    \"name\": \"s3_access_key\",\n",
+    "    #    \"value\": \"minioadmin\"\n",
+    "    #},\n",
+    "    #{\n",
+    "    #    \"name\": \"s3_secret_key\",\n",
+    "    #    \"value\": \"minioadmin\"\n",
+    "    #}\n",
     "]\n",
     "print(json.dumps(variables, indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1134092b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "201\n",
+      "Created process instance at https://registration-harvester-api.develop.eoepca.org/flowable-rest/service/runtime/process-instances/7d7c7a2c-3f92-11f0-bbce-f2cc86e9cfcb\n"
+     ]
+    }
+   ],
    "source": [
     "# Create HTTP request to start the workflow\n",
     "body = {}\n",
