added managing of resources with login

--- a/demoroot/notebooks/04 Data Access.ipynb
+++ b/demoroot/notebooks/04 Data Access.ipynb
@@ -1006,7 +1006,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"develop.eoepca.org\"\n",
+    "base_domain = \"apx.develop.eoepca.org\"\n",
     "\n",
     "PROTECTED_STAC_API_URL = f\"https://eoapi.{base_domain}/stac\""
    ]
@@ -1071,7 +1071,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAPS_API_URL = f\"https://maps.{base_domain}\"\n",
+    "MAPS_API_URL = f\"https://maps.develop.eoepca.org\"\n",
     "from PIL import Image\n",
     "from IPython.display import display\n",
     "import io\n",
@@ -1187,11 +1187,222 @@
     "# for scene in resp['scenes']:\n",
     "#     print(scene)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22a1e00e",
+   "metadata": {},
+   "source": [
+    "## Managing API resources with login"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccfa95b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "realm = \"eoepca\"\n",
+    "base_domain = \"apx.develop.eoepca.org\"\n",
+    "keycloak_endpoint = f\"https://iam-auth.{base_domain}\"\n",
+    "token_endpoint = f\"{keycloak_endpoint}/realms/{realm}/protocol/openid-connect/token\"\n",
+    "print(token_endpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05f1e72a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def iam_token(username, password):\n",
+    "    headers = {\n",
+    "        \"Cache-Control\": \"no-cache\",\n",
+    "        \"Content-Type\": \"application/x-www-form-urlencoded\"\n",
+    "    }\n",
+    "    data = {\n",
+    "        \"scope\": \"roles\",\n",
+    "        \"grant_type\": \"password\",\n",
+    "        \"username\": username,\n",
+    "        \"password\": password,\n",
+    "        \"client_id\": \"demo\",\n",
+    "        \"client_secret\": \"demo\"\n",
+    "    }\n",
+    "    response = requests.post(token_endpoint, headers=headers, data=data)\n",
+    "    if response.ok:\n",
+    "        return response.json()[\"access_token\"]\n",
+    "    else:\n",
+    "        print(response)\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13f3529a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jwt\n",
+    "import requests\n",
+    "token_admin = iam_token(\"example-admin\", \"changeme\")\n",
+    "token_eric = iam_token(\"eric\", \"changeme\")\n",
+    "decoded_token_admin = jwt.decode(token_admin, options={\"verify_signature\": False})\n",
+    "print(token_admin)\n",
+    "print(f\"\\n{decoded_token_admin}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0d1c833",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STAC_API_URL = f\"https://eoapi.{base_domain}/stac\"\n",
+    "for collection in requests.get(f\"{STAC_API_URL}/collections\").json()['collections']:\n",
+    "    print(collection['id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10750d9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collections_to_delete = [\"123\", \"1234\", \"12345\", \"newcoll\", \"testing\", \"ws_eric.naip\"]\n",
+    "for collection in collections_to_delete:\n",
+    "    response = requests.delete(f\"{STAC_API_URL}/collections/{collection}\", headers={\"Authorization\": f\"Bearer {token_admin}\"})\n",
+    "    if response.status_code > 204:\n",
+    "        print(f\"Error deleting collection {collection}: {response.status_code} - {response.text}\")\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(f\"({response.status_code}) Collection {collection} deleted successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "225e07c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "private_collection = {\n",
+    "    \"id\": \"ws_eric.naip\",\n",
+    "    \"description\": \"Private collection for Eric's workspace\",\n",
+    "    \"title\": \"Eric's NAIP Collection\",\n",
+    "    \"links\": [\n",
+    "        {\n",
+    "            \"rel\": \"self\",\n",
+    "            \"href\": f\"{STAC_API_URL}/collections/ws_eric.naip\",\n",
+    "            \"type\": \"application/json\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"rel\": \"parent\",\n",
+    "            \"href\": f\"{STAC_API_URL}/collections\",\n",
+    "            \"type\": \"application/json\"\n",
+    "        }\n",
+    "    ],\n",
+    "    \"extent\": {\n",
+    "        \"spatial\": {\n",
+    "            \"bbox\": [[-180.0, -90.0, 180.0, 90.0]]\n",
+    "        },\n",
+    "        \"temporal\": {\n",
+    "            \"interval\": [[\"2020-01-01T00:00:00Z\", None]]\n",
+    "        }\n",
+    "    },\n",
+    "    \"type\": \"Collection\",\n",
+    "    \"stac_version\": \"1.0.0\",\n",
+    "    \"license\": \"MIT\"\n",
+    "}\n",
+    "response = requests.post(f\"{STAC_API_URL}/collections\", json=private_collection, headers={\"Authorization\": f\"Bearer {token_eric}\"})\n",
+    "print(response.status_code)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d593ba3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7bb6559",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet('../data/catalog.v1.parquet')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c05bcc9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import stac_geoparquet\n",
+    "from shapely import wkb\n",
+    "import numpy as np\n",
+    "\n",
+    "def convert_ndarray(obj):\n",
+    "    if isinstance(obj, np.ndarray):\n",
+    "        return obj.tolist()\n",
+    "    elif isinstance(obj, pd.Timestamp):\n",
+    "        return obj.isoformat()\n",
+    "    elif isinstance(obj, dict):\n",
+    "        return {k: convert_ndarray(v) for k, v in obj.items()}\n",
+    "    elif isinstance(obj, list):\n",
+    "        return [convert_ndarray(i) for i in obj]\n",
+    "    else:\n",
+    "        return obj\n",
+    "\n",
+    "for row in df.to_dict(orient=\"records\"):\n",
+    "    # Convert geometry from WKB bytes to shapely geometry\n",
+    "    if isinstance(row.get(\"geometry\"), bytes):\n",
+    "        row[\"geometry\"] = wkb.loads(row[\"geometry\"])\n",
+    "    dict_item = stac_geoparquet.to_dict(row)\n",
+    "    dict_item['collection'] = 'ws_eric.naip'\n",
+    "    # for link in dict_item[\"links\"]:\n",
+    "    #     link[\"href\"] = link[\"href\"].replace(\"https://planetarycomputer.microsoft.com/api/stac/v1\", f\"{STAC_API_URL}\")\n",
+    "\n",
+    "    # Convert all numpy arrays to lists for JSON serialization\n",
+    "    dict_item = convert_ndarray(dict_item)\n",
+    "\n",
+    "    dict_item['bbox'] = [\n",
+    "        dict_item['bbox']['xmin'],\n",
+    "        dict_item['bbox']['ymin'],\n",
+    "        dict_item['bbox']['xmax'],\n",
+    "        dict_item['bbox']['ymax'],\n",
+    "        ]\n",
+    "\n",
+    "    dict_item['type'] = \"Feature\"\n",
+    "    dict_item['assets']['thumbnail']['href'] = dict_item['assets']['thumbnail']['href'].replace(\"./\", \"https://naipeuwest.blob.core.windows.net/naip/\")\n",
+    "\n",
+    "    print(dict_item)\n",
+    "    response = requests.post(\n",
+    "        f\"{STAC_API_URL}/collections/ws_eric.naip/items\",\n",
+    "        json=dict_item,\n",
+    "        headers={\"Authorization\": f\"Bearer {token_admin}\"}\n",
+    "    )\n",
+    "    print(f\"({response.status_code}) {dict_item['id']} added to collection ws_eric.naip\")\n",
+    "    print(response.json())\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "eoepca-demo",
    "language": "python",
    "name": "python3"
   },
@@ -1205,7 +1416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
